--- a/src/main/resources/templates.motos/index.html
+++ b/src/main/resources/templates.motos/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lista de Motos</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 
+<h1>Lista de Motos</h1>
+
+<a th:href="@{/motos/novo}">+ Nova Moto</a>
+
+<table border="1" cellpadding="8" cellspacing="0">
+    <thead>
+    <tr>
+        <th>Placa</th>
+        <th>Modelo</th>
+        <th>Marca</th>
+        <th>Status</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="moto : ${motos}">
+        <td th:text="${moto.placa}"></td>
+        <td th:text="${moto.modelo}"></td>
+        <td th:text="${moto.marca}"></td>
+        <td th:text="${moto.status}"></td>
+        <td>
+            <a th:href="@{|/motos/${moto.placa}|}">Ver</a> |
+            <a th:href="@{|/motos/${moto.placa}/editar|}">Editar</a> |
+            <a th:href="@{|/motos/${moto.placa}/deletar|}">Excluir</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
