--- a/src/main/resources/templates.patios/index.html
+++ b/src/main/resources/templates.patios/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lista de Patios</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 
+<h1>Lista de Patios</h1>
+
+<a th:href="@{/patios/novo}">+ Novo Patio</a>
+
+<table border="1" cellpadding="8" cellspacing="0">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Nome</th>
+        <th>Largura</th>
+        <th>Comprimento</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="patio : ${patios}">
+        <td th:text="${patio.id}"></td>
+        <td th:text="${patio.nome}"></td>
+        <td th:text="${patio.largura}"></td>
+        <td th:text="${patio.comprimento}"></td>
+        <td>
+            <a th:href="@{|/patios/${patio.id}|}">Ver</a> |
+            <a th:href="@{|/patios/${patio.id}/editar|}">Editar</a> |
+            <a th:href="@{|/patios/${patio.id}/deletar|}">Excluir</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
